--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@mui/material": "^6.4.2",
     "cra-template": "1.2.0",
     "file-saver": "^2.0.5",
+    "jspdf": "^2.5.2",
     "react": "^19.0.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
