--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "cra-template": "1.2.0",
     "file-saver": "^2.0.5",
     "jspdf": "^2.5.2",
+    "pdfmake": "^0.2.18",
     "react": "^19.0.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
